fix menu styles and statistics details on mobile

--- a/themes/gestion/less/block-views-block-estadisticas-bottom.less
+++ b/themes/gestion/less/block-views-block-estadisticas-bottom.less
@@ -85,7 +85,34 @@
 			margin-left:8px;
 		}
 		@media (max-width: 767px){
+			margin-left:16px;
+		}
+		@media (max-width: 725px){
+			margin-left:15px;
+		}
+		@media (max-width: 683px){
+			margin-left:14px;
+		}
+		@media (max-width: 642px){
+			margin-left:13px;
+		}
+		@media (max-width: 600px){
+			margin-left:12px;
+		}
+		@media (max-width: 558px){
+			margin-left:11px;
+		}
+		@media (max-width: 517px){
+			margin-left:10px;
+		}
+		@media (max-width: 445px){
+			margin-left:9px;
+		}
+		@media (max-width: 403px){
 			margin-left:8px;
+		}
+		@media (max-width: 362px){
+			margin-left:7px;
 		}
 		
 	}
