--- a/themes/gestion/less/menu.less
+++ b/themes/gestion/less/menu.less
@@ -36,6 +36,11 @@ header.container{
 	}
 
 	.navbar-collapse {
+		@media (max-width: 767px){
+			padding-left:0px;
+			margin-right: 0px;
+    		margin-left: 0px;
+		}
 		padding-left:0px;
 		padding-right:0px;
 		text-align: center;
@@ -48,15 +53,25 @@ header.container{
 	    }
 	}
 	
-	.menu{
+	.navbar-nav{
 		width: 100%;
 		background-color: #000;
-		> li > a, > li:focus > a, > li:visited > a, > li:hover > a, > li:active > a{
+		@media (max-width: 767px){
+			margin: 7.5px 0px;
+		}
+		> li > a, > li:visited > a, > li:hover > a, > li:focus > a, > li:active > a{
 			color: #fff;
 			background-color: #000;	
 		}
 		>li{
 			ul{
+				background-color: #000;
+				width:100%;
+				border:none;	
+				> li > a, > li:visited > a, > li:hover > a, > li:focus > a, > li:active > a{
+					color: #fff;
+					background-color: #000;
+				}
 				li:first-child{
 					@media (min-width: 768px){
 						display: none;	
@@ -64,6 +79,17 @@ header.container{
 				}
 				
 			}
-		} 
+		}
+		.open{
+			>a, >a:hover, >a:focus{
+				background-color: #fff;
+    			color: #000;
+			} 
+			.dropdown-menu{
+				> li > a, > li:hover > a, > li:focus > a, > li:visited > a,  > li:active > a {
+    				color: #fff;
+				}
+			}
+		}
 	}
 }
